--- a/deploy-user.yml
+++ b/deploy-user.yml
@@ -7,7 +7,7 @@
     tasks:
       - name: Install packages
         yum:
-          name: "{{ item }}"
+          name: "{{ items }}"
           state: latest
           loop:
             - nodejs 
